<resources>
    <string name="app_name">Are you MegaMind ?</string>
    <string name="nav_vocab">Vocab</string>
    <string name="nav_training">Training</string>
    <string name="type">Type</string>
    <string name="spelling">Spelling</string>
    <string name="meaning">Meaning</string>
    <string name="save_meaning">Save meaning</string>
    <string name="add_meaning">Add Meaning</string>
    <string name="cancel_meaning">Cancel meaning</string>
    <string name="meanings_list">Meanings list</string>
    <string name="save">Save</string>
    <string name="example">Example</string>
    <string name="synonyms">Synonyms</string>
    <string name="cancel">Cancel</string>
    <string name="antonyms">Antonyms</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="training_step">Training Step</string>
    <string name="mastery">Mastery</string>
    <string name="latest_test">Latest test</string>
    <string name="total_right_answers">Total right answers</string>
    <string name="total_wrong_answers">Total wrong answers</string>
    <string name="all_tests">All tests</string>
    <string name="create_a_new_training">Create a new training</string>
    <string name="CorrectAnswerMessage">Correct answer !</string>
</resources>
